# GenAI

./: README.md  ideation-expansion-plan.md
Ollama-experimentation-playground/: README.md  docker-compose.yml  pom.xml
Ollama-experimentation-playground/collection/: GetAllPlayers.http  GetPlayerById.http  chat_requests.txt
Ollama-experimentation-playground/player-service-model/: Dockerfile  README.md  pyproject.toml
Ollama-experimentation-playground/player-service-model/a4a_model/: features_db.csv  model.py  server.py  team_model.joblib  train.ipynb
Ollama-experimentation-playground/src/main/java/com/app/playerservicejava/: PlayerServiceJavaApplication.java
Ollama-experimentation-playground/src/main/java/com/app/playerservicejava/config/: ChatClientConfiguration.java
Ollama-experimentation-playground/src/main/java/com/app/playerservicejava/controller/: PlayerController.java
Ollama-experimentation-playground/src/main/java/com/app/playerservicejava/controller/chat/: ChatController.java
Ollama-experimentation-playground/src/main/java/com/app/playerservicejava/model/: Player.java  Players.java
Ollama-experimentation-playground/src/main/java/com/app/playerservicejava/repository/: PlayerRepository.java
Ollama-experimentation-playground/src/main/java/com/app/playerservicejava/service/: PlayerService.java
Ollama-experimentation-playground/src/test/java/com/app/playerservicejava/: PlayerServiceJavaApplicationTests.java
Ollama-experimentation-playground/src/test/java/com/app/playerservicejava/controller/: PlayerControllerTest.java
(+1 files in other folders)
