[tool.poetry]
name = "a4a-model"
version = "0.1.0"
description = ""
authors = ["Efraim Feinstein <efraim.feinstein@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
pandas = "^2.2.3"
jupyter = "^1.1.1"
scikit-learn = "^1.5.2"
pydantic = "^2.9.2"
flask-pydantic = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
